<resources>
    <string name="app_name">UPI Payment App</string>
    <string name="add_users">Add Users</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_address">Enter your upi address</string>
    <string name="add">Add</string>
    <string name="all_users_list">All Users List</string>
    <string name="all_users_list_is_empty">All Users List is Empty</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="setting">Setting</string>
</resources>