<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_users"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_18sdp"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_addUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePhoto"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/profileimageholder" />

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:src="@drawable/add_banner_image"
            android:layout_marginStart="@dimen/_40sdp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_layout"
        android:hint="@string/enter_your_name"
        android:imeOptions="actionNext"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/colorText"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/et_userUPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_userName"
        android:hint="@string/enter_your_address"
        android:layout_marginTop="@dimen/_10sdp"
        android:imeOptions="actionDone"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/colorText"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/colorWhite"
        android:background="@drawable/background_button"
        android:layout_below="@+id/et_userUPI"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/bt_allUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_users_list"
        android:textColor="@color/colorWhite"
        android:background="@drawable/background_button"
        android:layout_below="@+id/bt_add"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/bt_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/colorWhite"
        android:background="@drawable/background_button"
        android:layout_below="@+id/bt_allUsers"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>